tests/paczka1/small_fuzzy/17280616.err
Error in line 1: ikO0c3vYkM A652 16,7
Error in line 2: zSragnUh0l A3 36,5
